﻿## 2014/03/10

* Add markdown filetype and render support, you can just like rest filetype view the output in pane.

[2013/10/15]
InputAssistant.py   Fix get_calltip bug.

[2011/04/21]
mPad.py             Add configurable memo file support. So you can set something like this:
                    
                    [default]
                    memo = "C:\\path\\to\\memo.txt"
scriptils.py        Add some useful methods to support scripts files. Such as emptytab, newtab, etc.
LexerClass1.py mLexer.py Add Bash support.

All above thanks to Helio Perroni Filho <xperroni@gmail.com>
[2010/04/22]
mGuessLang.py       Add #! /usr/bin/env python support thanks for zhangchunlin
plugin/ruby/mClassBrowser.py
                    Fix ruby class browser bug
Add Lua plugin      Thanks to zhangchunlin.

[2008/06/02]
mEncoding.py EncodingDialog.py
                    Migirate EncodingDialog from xrc to meide
LexerBase.py mLexerBase.py LexerClass.py
                    Add default color theme support, you can set it in Preference
                    
[2008/05/14]
mPythonProject.py   Add Create Python Package in context menu of Directory Browser Window

[2008/05/12]
RegexWindow.py      Improve regex window, and when you set Unicode flag, it'll 
                    automatically convert \uXXXX to unichr
[2008/05/05]
mEditorCtrl.py      Fix Cancel Save file will prompt save as dialog again bug

[2008/05/01]
mFormat.py          Fix strip tailing spaces bug

-------------------------------------- 4.0 -----------------------------
[2008/04/24]
Fix                 Cann't to Can't

[2008/04/19]
mInputAssistant.py  Add config menu, and add toggle input assistant menu item
DirBrowser.py       Fix refresh directory bug

[2008/04/18]
mWrapText.py wraptext.py
                    Add wrap text feature

[2008/04/15]
doc                 Modify the documents
mEditorCtrl.py      Add copy filename to clipboard menu on document area tab context menu

[2008/04/14]